[package]
name = "glow-station"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "station"
path = "src/main.rs"

[[bin]]
name = "sert"
path = "src/x.rs"


[[bin]]
name = "tui"
path = "src/run_tui.rs"

[dependencies]
crossterm = "0.29.0"
log = "0.4.29"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
serialport = "4.8.1"
