[package]
name = "glow-station"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "station"
path = "src/main.rs"

[[bin]]
name = "sert"
path = "src/x.rs"


[[bin]]
name = "tui"
path = "src/tui.rs"

[dependencies]
crossterm = "0.29.0"
derive_builder = "0.20.2"
env_logger = "0.11.8"
log = "0.4.29"
nix = { version = "0.30.1", features = ["signal"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
serde_yaml = "0.9.34"
serialport = "4.8.1"
